--- a/src/components/Signup/Signup.scss
+++ b/src/components/Signup/Signup.scss
@@ -125,6 +125,12 @@
     top: 0;
     height: 100%;
     transition: all 0.6s ease-in-out;
+
+    form {
+      span {
+        font-size: 1.1rem;
+      }
+    }
   }
 
   .sign-in-container {
