--- a/src/components/CartDropdown/CartDropdown.scss
+++ b/src/components/CartDropdown/CartDropdown.scss
@@ -1,26 +1,29 @@
 .CartDropdown {
   position: absolute;
-  width: 240px;
-  height: 340px;
+  width: 327px;
+  height: 440px;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 15px;
   background-color: white;
   top: 90px;
   right: 40px;
+  border: 1px solid black;
   z-index: 5;
 
   .cart-items {
-    height: 240px;
+    display: flex;
     flex-direction: column;
+    height: auto;
     overflow: scroll;
+    margin-bottom: 20px;
   }
 
   button {
     margin-top: auto;
     background-color: #68e1fd;
     border-radius: 20px;
-    height: 40px;
+    padding: 10px;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-family: "Lato", sans-serif;
