aimplemented add and remove function to checkout component

--- a/src/components/CheckoutItem/CheckoutItem.scss
+++ b/src/components/CheckoutItem/CheckoutItem.scss
@@ -9,13 +9,13 @@
 
   .image-container {
     width: 25%;
-    padding-right: 15px;
 
     img {
-      width: 100%;
+      width: 80%;
       height: 100%;
     }
   }
+
   .name,
   .quantity,
   .price {
@@ -48,5 +48,9 @@
   .remove-button {
     padding-left: 12px;
     cursor: pointer;
+
+    i {
+      font-size: 1.2rem;
+    }
   }
 }
