--- a/src/components/Checkout/Checkout.scss
+++ b/src/components/Checkout/Checkout.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   margin: 50px auto 50px;
+  font-family: "Lato", sans-serif;
 
   .checkout-header {
     width: 100%;
