--- a/src/components/CollectionItem/CollectionItem.scss
+++ b/src/components/CollectionItem/CollectionItem.scss
@@ -47,7 +47,7 @@
     position: absolute;
     width: 80%;
     top: 238px;
-    left: 22px;
+    left: 10%;
     background-color: #f99898;
     border: none;
     padding: 12px;
