--- a/src/components/Checkout/Checkout.scss
+++ b/src/components/Checkout/Checkout.scss
@@ -1,14 +1,15 @@
 .Checkout {
-  width: 55%;
+  width: 80%;
   min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 50px auto 50px;
+  margin: 100px auto 50px;
   font-family: "Lato", sans-serif;
 
   .checkout-header {
     width: 100%;
+    font-size: 1.3rem;
     height: 40px;
     display: flex;
     justify-content: space-between;
@@ -40,5 +41,11 @@
       font-size: 1.3rem;
       margin: 30px auto;
     }
+  }
+
+  .test-warning {
+    margin: 40px 0;
+    font-size: 1.5rem;
+    color: red;
   }
 }
