--- a/src/components/CartDropdown/CartDropdown.scss
+++ b/src/components/CartDropdown/CartDropdown.scss
@@ -11,6 +11,10 @@
   border: 1px solid black;
   z-index: 5;
 
+  @media screen and (max-width: 425px) {
+    right: 25px;
+  }
+
   .cart-items {
     display: flex;
     flex-direction: column;
@@ -29,13 +33,16 @@
   button {
     margin-top: auto;
     background-color: #68e1fd;
-    border-radius: 20px;
-    padding: 10px;
+    border-radius: 50px;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-family: "Lato", sans-serif;
     font-weight: 500;
     font-size: 1.2rem;
     cursor: pointer;
+
+    @media screen and (max-width: 425px) {
+      padding: unset;
+    }
   }
 }
