--- a/src/components/CartIcon/CartIcon.scss
+++ b/src/components/CartIcon/CartIcon.scss
@@ -9,6 +9,29 @@
   bottom: 12px;
   right: 8px;
 
+  @media screen and (max-width: 425px) {
+    &:active {
+      color: white;
+    }
+
+    &:hover {
+      color: white;
+    }
+  }
+
+  @media screen and (max-width: 992px) and (min-width: 425px) {
+    right: -50px;
+  }
+  @media screen and (max-width: 425px) and (min-width: 320px) {
+    left: 5px;
+    top: 5px;
+  }
+
+  @media screen and (max-width: 600px) and (min-width: 425px) {
+    right: -33px;
+    bottom: -4px;
+  }
+
   .fa-shopping-cart {
     width: 24px;
     height: 24px;
@@ -21,5 +44,18 @@
     top: 9px;
     left: 24px;
     color: black;
+
+    @media screen and (max-width: 992px) {
+      left: 17px;
+    }
+
+    @media screen and (max-width: 600px) and (min-width: 425px) {
+      top: -7px;
+    }
+
+    @media screen and (max-width: 425px) and (min-width: 320px) {
+      font-size: 8px;
+      top: -8px;
+    }
   }
 }
