--- a/src/components/CollectionPreview/CollectionPreview.scss
+++ b/src/components/CollectionPreview/CollectionPreview.scss
@@ -3,6 +3,10 @@
     margin-top: 0;
     padding-top: 60px;
     font-size: 3.3rem;
+
+    @media screen and (max-width: 425px) {
+      font-size: 2.3rem;
+    }
   }
   .preview {
     display: grid;
