--- a/src/components/Homepage/Homepage.scss
+++ b/src/components/Homepage/Homepage.scss
@@ -20,6 +20,12 @@
     letter-spacing: 1px;
     color: #ffffff;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.44);
+
+    @media screen and (max-width: 425px) {
+      font-size: 2.8rem;
+      width: 200px;
+      top: 158px;
+    }
   }
 
   h2 {
@@ -33,6 +39,11 @@
     font-size: 2rem;
     color: #ffffff;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24);
+
+    @media screen and (max-width: 425px) {
+      font-size: 1.4rem;
+      top: 270px;
+    }
   }
 
   button {
@@ -48,6 +59,13 @@
     border-radius: 29px;
     font-family: "Lato", sans-serif;
     cursor: pointer;
+
+    @media screen and (max-width: 425px) {
+      width: 119px;
+      height: 44px;
+      top: 387px;
+      font-size: 0.8rem;
+    }
   }
 
   img {
@@ -56,6 +74,13 @@
     height: 428px;
     left: 40%;
     top: 167px;
+
+    @media screen and (max-width: 425px) {
+      width: 186px;
+      height: 166px;
+      left: 48%;
+      top: 140px;
+    }
   }
 
   #wave {
@@ -64,5 +89,10 @@
     height: 320px;
     left: 0;
     top: 590px;
+
+    @media screen and (max-width: 425px) {
+      top: 391px;
+      width: 219vw;
+    }
   }
 }
