--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,10 +1,36 @@
 .Navbar {
   .nav-wrapper {
+    .sidenav-trigger {
+      text-decoration: none;
+    }
+
+    .cupcake-nav {
+      margin-left: 10px;
+
+      @media screen and (max-width: 992px) {
+        display: none;
+      }
+    }
     .brand-logo {
       img {
         position: relative;
         left: 20px;
-        top: 10px;
+        width: 30px;
+
+        @media screen and (max-width: 425px) {
+          left: unset;
+        }
+      }
+
+      @media screen and (max-width: 992px) {
+        left: 90%;
+      }
+      @media screen and (min-width: 992px) {
+        display: none;
+      }
+
+      &:hover {
+        color: white;
       }
     }
 
@@ -15,10 +41,30 @@
 
   li {
     a {
+      text-decoration: none;
+      position: relative;
       font-family: "Lato", sans-serif;
       font-size: 1.3rem;
       margin-right: 10px;
       color: white;
+
+      &:before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 13px;
+        left: 0;
+        background-color: white;
+        visibility: hidden;
+        transform: scaleX(0);
+        transition: all 0.2s ease-in-out 0s;
+      }
+
+      &:hover:before {
+        visibility: visible;
+        transform: scaleX(1);
+      }
 
       &:hover {
         background-color: rgba(0, 0, 0, 0) !important;
