--- a/src/components/Signup/Signup.scss
+++ b/src/components/Signup/Signup.scss
@@ -6,10 +6,18 @@
   overflow: hidden;
   font-family: "Vidaloka", serif;
 
+  @media screen and (max-width: 425px) {
+    padding: 0 20px;
+  }
+
   h1 {
     font-weight: bold;
     font-size: 2rem;
     margin: 0;
+
+    @media screen and (max-width: 425px) {
+      font-size: 1rem;
+    }
   }
 
   p {
@@ -41,6 +49,10 @@
     max-width: 100%;
     min-height: 480px;
     margin-top: 100px;
+
+    @media screen and (max-width: 425px) {
+      min-height: 349px;
+    }
   }
 
   .form-container {
@@ -62,6 +74,10 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+
+    @media screen and (max-width: 425px) {
+      padding: 0 20px;
+    }
   }
 
   .social-container {
@@ -106,6 +122,11 @@
     letter-spacing: 1px;
     transition: transform 80ms ease-in;
     cursor: pointer;
+
+    @media screen and (max-width: 425px) {
+      font-size: 0.8rem;
+      padding: 6px 20px;
+    }
   }
 
   button:active {
@@ -129,6 +150,10 @@
     form {
       span {
         font-size: 1.1rem;
+
+        @media screen and (max-width: 425px) {
+          font-size: 0.8rem;
+        }
       }
     }
   }
@@ -137,6 +162,27 @@
     left: 0;
     width: 50%;
     z-index: 2;
+
+    input {
+      @media screen and (max-width: 425px) {
+        font-size: 0.8rem;
+        height: 30px;
+        margin: 4px 0;
+      }
+    }
+
+    .google-button {
+      @media screen and (max-width: 425px) {
+        width: 124px !important;
+      }
+    }
+
+    .forgot {
+      @media screen and (max-width: 425px) {
+        font-size: 0.8rem;
+        margin: 8px 0;
+      }
+    }
   }
 
   .sign-up-container {
@@ -152,6 +198,14 @@
 
       button {
         margin-top: 10px;
+      }
+    }
+
+    input {
+      @media screen and (max-width: 425px) {
+        font-size: 0.8rem;
+        height: 30px;
+        margin: 0 0 8px 0;
       }
     }
   }
@@ -201,11 +255,20 @@
       position: relative;
       bottom: 20px;
       width: 300px;
+
+      @media screen and (max-width: 425px) {
+        width: 170px;
+        bottom: 58px;
+      }
     }
 
     h1 {
       font-size: 2rem;
       padding-bottom: 30px;
+
+      @media screen and (max-width: 425px) {
+        font-size: 1rem;
+      }
 
       &.welcome {
         position: relative;
@@ -220,18 +283,32 @@
         position: relative;
         bottom: 100px;
       }
+
+      @media screen and (max-width: 425px) {
+        font-size: 0.8rem;
+        letter-spacing: 0;
+        margin: 20px 8px 20px;
+      }
     }
 
     .bakingImg {
       position: relative;
       bottom: 30px;
       width: 300px;
+
+      @media screen and (max-width: 425px) {
+        width: 174px;
+      }
     }
 
     #signUp {
       background: white;
       position: relative;
       bottom: 5px;
+
+      @media screen and (max-width: 425px) {
+        bottom: 2px;
+      }
     }
   }
 
@@ -243,8 +320,16 @@
   .overlay-left {
     transform: translateY(-20%);
 
+    @media screen and (max-width: 425px) {
+      padding: 0 5px;
+    }
+
     h1 {
       padding: 0;
+    }
+
+    @media screen and (max-width: 425px) {
+      margin-top: 50px;
     }
   }
 
@@ -286,5 +371,9 @@
     height: 320px;
     left: 0;
     top: 590px;
+
+    @media screen and (max-width: 425px) {
+      display: none;
+    }
   }
 }
