--- a/src/components/Homepage/Homepage.scss
+++ b/src/components/Homepage/Homepage.scss
@@ -5,6 +5,10 @@
   background: #f99898;
   overflow: hidden;
 
+  @media screen and (max-width: 425px) {
+    height: 640px;
+  }
+
   .home-container {
     position: relative;
     bottom: 38px;
@@ -22,7 +26,7 @@
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.44);
 
     @media screen and (max-width: 425px) {
-      font-size: 2.8rem;
+      font-size: 2.9rem;
       width: 200px;
       top: 158px;
     }
@@ -43,6 +47,7 @@
     @media screen and (max-width: 425px) {
       font-size: 1.4rem;
       top: 270px;
+      font-weight: 400;
     }
   }
 
@@ -61,10 +66,10 @@
     cursor: pointer;
 
     @media screen and (max-width: 425px) {
-      width: 119px;
-      height: 44px;
-      top: 387px;
-      font-size: 0.8rem;
+      width: 152px;
+      height: 56px;
+      top: 357px;
+      font-size: 1.2rem;
     }
   }
 
@@ -91,7 +96,7 @@
     top: 590px;
 
     @media screen and (max-width: 425px) {
-      top: 391px;
+      top: 344px;
       width: 219vw;
     }
   }
