--- a/src/components/Homepage/Homepage.scss
+++ b/src/components/Homepage/Homepage.scss
@@ -12,6 +12,10 @@
   .home-container {
     position: relative;
     bottom: 38px;
+
+    @media screen and (max-width: 425px) {
+      bottom: 67px;
+    }
   }
 
   h1 {
@@ -29,6 +33,7 @@
       font-size: 2.9rem;
       width: 200px;
       top: 158px;
+      text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24);
     }
   }
 
@@ -48,6 +53,7 @@
       font-size: 1.4rem;
       top: 270px;
       font-weight: 400;
+      text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
     }
   }
 
@@ -96,8 +102,7 @@
     top: 590px;
 
     @media screen and (max-width: 425px) {
-      top: 344px;
-      width: 219vw;
+      display: none;
     }
   }
 }
