--- a/src/components/CartDropdown/CartDropdown.scss
+++ b/src/components/CartDropdown/CartDropdown.scss
@@ -1,48 +1,32 @@
 .CartDropdown {
   position: absolute;
-  width: 327px;
-  height: 440px;
+  width: 240px;
+  height: 340px;
   display: flex;
   flex-direction: column;
-  padding: 15px;
+  padding: 20px;
+  border: 1px solid black;
   background-color: white;
   top: 90px;
   right: 40px;
-  border: 1px solid black;
   z-index: 5;
 
-  @media screen and (max-width: 425px) {
-    right: 25px;
+  .empty-message {
+    font-size: 18px;
+    margin: 50px auto;
   }
 
   .cart-items {
+    height: 240px;
     display: flex;
     flex-direction: column;
-    height: auto;
     overflow: scroll;
-    margin-bottom: 20px;
-
-    .empty-message {
-      font-size: 1.5rem;
-      margin: 50px auto;
-      color: black;
-      font-family: "Lato", sans-serif;
-    }
   }
 
-  button {
+  .checkout-button {
     margin-top: auto;
-    background-color: #68e1fd;
-    border-radius: 50px;
+    background-color: black;
     border: none;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-family: "Lato", sans-serif;
-    font-weight: 500;
-    font-size: 1.2rem;
-    cursor: pointer;
-
-    @media screen and (max-width: 425px) {
-      padding: unset;
-    }
+    color: white;
   }
 }
