--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -1,40 +1,24 @@
 .CartItem {
   width: 100%;
   display: flex;
-  min-height: 80px;
+  height: 80px;
   margin-bottom: 15px;
-  font-family: "Lato", sans-serif;
 
   img {
-    width: 27%;
+    width: 30%;
   }
 
   .item-details {
     width: 70%;
-    display: block;
     color: black;
-    padding-right: 20px;
-    margin: auto 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    // padding: 10px 20px;
 
-    .remove-from-cart {
-      cursor: pointer;
-      display: inline-flex;
-      i {
-        font-size: 1rem;
-      }
+    .name {
+      font-size: 16px;
     }
-  }
-
-  .name {
-    margin-left: 5px;
-  }
-
-  .price {
-    margin-right: 8px;
-  }
-
-  .name,
-  .price {
-    font-size: 0.8rem;
   }
 }
