--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -3,6 +3,7 @@
   display: flex;
   height: 80px;
   margin-bottom: 15px;
+  font-family: "Lato", sans-serif;
 
   img {
     width: 30%;
@@ -11,14 +12,19 @@
   .item-details {
     width: 70%;
     color: black;
-    display: flex;
+    // display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
     // padding: 10px 20px;
 
     .name {
-      font-size: 16px;
+      margin: 0 5px;
+    }
+
+    .name,
+    .price {
+      font-size: 11px;
     }
   }
 }
