--- a/src/components/Signup/Signup.scss
+++ b/src/components/Signup/Signup.scss
@@ -52,7 +52,8 @@
     margin-top: 100px;
 
     @media screen and (max-width: 425px) {
-      min-height: 349px;
+      min-height: 296px;
+      margin-top: 69px;
     }
   }
 
