--- a/src/components/CartDropdown/CartDropdown.scss
+++ b/src/components/CartDropdown/CartDropdown.scss
@@ -26,12 +26,13 @@
   }
 
   .checkout-button {
-    margin-top: auto;
+    margin-top: 10px;
     background-color: #68e1fd;
     border: none;
     font-size: 1.1rem;
     color: black;
     height: 50px;
     line-height: 50px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
   }
 }
